# prism-db

./: Cargo.toml  DESIGN_PREPARED_QUERIES.md  README.md  ROADMAP.md
.claude/: settings.local.json
drivers/prism-db-mysql/: Cargo.toml
drivers/prism-db-mysql/src/: lib.rs
drivers/prism-db-mysql/src/builders/: filters.rs  groups.rs  projections.rs  sorts.rs
drivers/prism-db-mysql/src/driver/: driver.rs  mod.rs  transaction.rs
drivers/prism-db-mysql/src/queries/: binders.rs  delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/prism-db-mysql/src/types/: cursor.rs  row.rs
drivers/prism-db-postgres/: Cargo.toml
drivers/prism-db-postgres/src/: lib.rs
drivers/prism-db-postgres/src/builders/: filters.rs  groups.rs  projections.rs  sorts.rs
drivers/prism-db-postgres/src/driver/: driver.rs  executor.rs  transaction.rs
drivers/prism-db-postgres/src/queries/: binders.rs  delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/prism-db-postgres/src/types/: cursor.rs  row.rs
drivers/prism-db-sqlite/: Cargo.toml
drivers/prism-db-sqlite/src/: lib.rs
drivers/prism-db-sqlite/src/builders/: filters.rs  groups.rs  projections.rs  sorts.rs
drivers/prism-db-sqlite/src/driver/: driver.rs  executor.rs  transaction.rs
drivers/prism-db-sqlite/src/queries/: binders.rs  delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/prism-db-sqlite/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-mysql/: Cargo.toml
drivers/simple-db-mysql/src/: lib.rs
drivers/simple-db-mysql/src/builders/: filters.rs  mod.rs  sorts.rs
drivers/simple-db-mysql/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
drivers/simple-db-mysql/src/queries/: binders.rs  delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/simple-db-mysql/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-mysql/tests/: integration_test.rs
drivers/simple-db-postgres/: Cargo.toml
drivers/simple-db-postgres/src/: lib.rs
drivers/simple-db-postgres/src/builders/: filters.rs  groups.rs  mod.rs  projections.rs  sorts.rs
drivers/simple-db-postgres/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
drivers/simple-db-postgres/src/queries/: binders.rs  delete.rs  insert.rs  mod.rs  update.rs
drivers/simple-db-postgres/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-postgres/tests/: integration_test.rs
drivers/simple-db-sqlite/: Cargo.toml
drivers/simple-db-sqlite/src/: lib.rs
drivers/simple-db-sqlite/src/builders/: filters.rs  groups.rs  mod.rs  projections.rs  sorts.rs
drivers/simple-db-sqlite/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
drivers/simple-db-sqlite/src/queries/: binders.rs  delete.rs  find.rs  insert.rs  mod.rs  update.rs
drivers/simple-db-sqlite/src/types/: cursor.rs  mod.rs  row.rs
drivers/simple-db-sqlite/tests/: integration_test.rs
prism-db/: Cargo.toml
prism-db-core/: Cargo.toml
prism-db-core/src/: context.rs  lib.rs
prism-db-core/src/query/builders/filters/: builder.rs  filter.rs  mod.rs
prism-db-core/src/query/builders/groups/: mod.rs
prism-db-core/src/query/builders/projections/: mod.rs  projection.rs
prism-db-core/src/query/builders/sorts/: mod.rs  sort.rs
prism-db-core/src/query/queries/: find.rs  update.rs
prism-db-core/src/types/: row.rs  value.rs
prism-db-macros/: Cargo.toml
prism-db-macros/src/: lib.rs
prism-db-macros/src/entity/: mod.rs
prism-db-orm/: Cargo.toml
prism-db-orm/src/: cursor.rs  entity.rs  lib.rs
prism-db/src/: lib.rs
simple-db/: Cargo.toml
simple-db-core/: Cargo.toml
simple-db-core/src/: context.rs  error.rs  lib.rs  row.rs
simple-db-core/src/driver/: driver.rs  executor.rs  mod.rs  transaction.rs
simple-db-core/src/query/: mod.rs
simple-db-core/src/query/builders/: mod.rs
simple-db-core/src/query/queries/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
simple-db-core/src/types/: cursor.rs  error.rs  mod.rs  result.rs  row.rs  value.rs
simple-db-core/src/value/: mod.rs
simple-db-driver/src/: driver.rs  executor.rs  lib.rs  transaction.rs
simple-db-macros/: Cargo.toml
simple-db-macros/src/: lib.rs
simple-db-macros/src/entity/: mod.rs
simple-db-orm/: Cargo.toml
simple-db-orm/src/: cursor.rs  entity.rs  lib.rs
simple-db-query/src/builders/: mod.rs
simple-db-query/src/builders/filters/: filter.rs  filter_builder.rs  mod.rs
simple-db-query/src/types/: error.rs  mod.rs  row.rs  value.rs
simple-db/benches/: simple_db_bench.rs
simple-db/src/: lib.rs
simple-db/src/driver/memory/: mod.rs
simple-db/src/query/filters/: filter.rs  filter_builder.rs
simple-db/src/query/groups/: group_builder.rs  mod.rs
simple-db/src/query/projections/: projection.rs  projection_builder.rs
simple-db/src/query/sorts/: sort.rs  sort_builder.rs
src/: context.rs  lib.rs
src/driver/: driver.rs
src/driver/memory/: comparison.rs  mod.rs
src/entity/: context.rs  entity.rs  entity_query_builder.rs  mod.rs
src/query/: mod.rs
src/query/filters/: filter.rs  filter_builder.rs  filter_definition.rs  mod.rs
src/query/groups/: group_builder.rs  group_definition.rs  mod.rs
src/query/projections/: mod.rs  projection.rs  projection_builder.rs
src/query/sorts/: mod.rs  sort.rs  sort_builder.rs
src/types/: error.rs  row.rs  value.rs
tests/: integration_crud.rs  integration_filters.rs
tests/prism-db-test/: Cargo.toml
tests/prism-db-test-mysql/: Cargo.toml
tests/prism-db-test-mysql/src/: bench.rs  crud.rs  lib.rs  orm.rs
tests/prism-db-test-postgres/: Cargo.toml
tests/prism-db-test-postgres/src/: bench.rs  crud.rs  lib.rs  orm.rs
tests/prism-db-test-sqlite/: Cargo.toml
tests/prism-db-test-sqlite/src/: bench.rs  crud.rs  lib.rs  orm.rs
tests/prism-db-test/src/: bench_crud.rs  bench_orm.rs  context.rs  crud.rs  entity.rs  lib.rs  orm.rs
tests/simple-db-mysql-test/src/: main.rs
tests/simple-db-postgres-test/src/: main.rs
tests/simple-db-sqlite-test/src/: main.rs
tests/simple-db-test/: Cargo.toml
tests/simple-db-test-lib/: Cargo.toml
tests/simple-db-test-lib/src/: benchmarks.rs  lib.rs  orm_tests.rs
(+12 files in other folders)
