[workspace]
resolver = "3"
members = [
    "simple-db-core",
    "simple-db-orm",
    "simple-db-macros",
    "drivers/simple-db-mysql",
    "drivers/simple-db-postgres",
    "drivers/simple-db-sqlite",
    "simple-db",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Filipe Santos <filipesantos__12@hotmail.com>"]
repository = "https://github.com/fsantos12/simple-db"

[workspace.dependencies]
# --- Internal ---
simple-db          = { path = "simple-db", version = "0.1.0" }
simple-db-core     = { path = "simple-db-core", version = "0.1.0" }
simple-db-orm      = { path = "simple-db-orm", version = "0.1.0" }
simple-db-macros   = { path = "simple-db-macros", version = "0.1.0" }
simple-db-mysql    = { path = "drivers/simple-db-mysql", version = "0.1.0" }
simple-db-postgres = { path = "drivers/simple-db-postgres", version = "0.1.0" }
simple-db-sqlite   = { path = "drivers/simple-db-sqlite", version = "0.1.0" }

# --- Serialization & Formats ---
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# --- Types & Utils---
chrono       = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde-float"] }
uuid         = { version = "1.23.1", features = ["v7", "serde"] }
regex        = "1.12.3"
thiserror    = "2"

# --- Collections ---
smallvec = "1.11"
smol_str = "0.3"

# --- SQL ---
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "rust_decimal", "uuid", "json", "macros"] }

# --- Async & Runtime ---
async-trait = "0.1"
futures     = "0.3"
