[package]
name = "prism-db-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Serialization & Formats ---
serde      = { workspace = true }
serde_json = { workspace = true }

# --- Types & Utils---
chrono       = { workspace = true }
rust_decimal = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }

# --- Collections ---
smallvec = { workspace = true }
smol_str = { workspace = true }

# --- Async & Runtime ---
async-trait = { workspace = true }
futures     = { workspace = true }