[package]
name = "simple-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["runtime-tokio-rustls"]

orm      = ["dep:simple-db-orm"]
sqlite   = ["dep:simple-db-sqlite"]
postgres = ["dep:simple-db-postgres"]
mysql    = ["dep:simple-db-mysql"]

runtime-tokio-rustls = [
    "simple-db-mysql?/runtime-tokio-rustls",
    "simple-db-postgres?/runtime-tokio-rustls",
    "simple-db-sqlite?/runtime-tokio-rustls"
]
runtime-tokio-native-tls = [
    "simple-db-mysql?/runtime-tokio-native-tls",
    "simple-db-postgres?/runtime-tokio-native-tls",
    "simple-db-sqlite?/runtime-tokio-native-tls"
]
runtime-async-std-rustls = [
    "simple-db-mysql?/runtime-async-std-rustls",
    "simple-db-postgres?/runtime-async-std-rustls",
    "simple-db-sqlite?/runtime-async-std-rustls"
]
runtime-async-std-native-tls = [
    "simple-db-mysql?/runtime-async-std-native-tls",
    "simple-db-postgres?/runtime-async-std-native-tls",
    "simple-db-sqlite?/runtime-async-std-native-tls"
]

[dependencies]
simple-db-core   = { workspace = true }
simple-db-orm    = { workspace = true, optional = true }

simple-db-sqlite   = { workspace = true, optional = true }
simple-db-postgres = { workspace = true, optional = true }
simple-db-mysql    = { workspace = true, optional = true }