[package]
name = "prism-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["runtime-tokio-rustls"]

orm      = ["dep:prism-db-orm"]
sqlite   = ["dep:prism-db-sqlite"]
postgres = ["dep:prism-db-postgres"]
mysql    = ["dep:prism-db-mysql"]

runtime-tokio-rustls = [
    "prism-db-mysql?/runtime-tokio-rustls",
    "prism-db-postgres?/runtime-tokio-rustls",
    "prism-db-sqlite?/runtime-tokio-rustls"
]
runtime-tokio-native-tls = [
    "prism-db-mysql?/runtime-tokio-native-tls",
    "prism-db-postgres?/runtime-tokio-native-tls",
    "prism-db-sqlite?/runtime-tokio-native-tls"
]
runtime-async-std-rustls = [
    "prism-db-mysql?/runtime-async-std-rustls",
    "prism-db-postgres?/runtime-async-std-rustls",
    "prism-db-sqlite?/runtime-async-std-rustls"
]
runtime-async-std-native-tls = [
    "prism-db-mysql?/runtime-async-std-native-tls",
    "prism-db-postgres?/runtime-async-std-native-tls",
    "prism-db-sqlite?/runtime-async-std-native-tls"
]

[dependencies]
prism-db-core   = { workspace = true }
prism-db-orm    = { workspace = true, optional = true }

prism-db-sqlite   = { workspace = true, optional = true }
prism-db-postgres = { workspace = true, optional = true }
prism-db-mysql    = { workspace = true, optional = true }
