[package]
name = "prism-db-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
runtime-tokio-rustls         = ["sqlx/runtime-tokio-rustls"]
runtime-tokio-native-tls     = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls     = ["sqlx/runtime-async-std-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]

[dependencies]
# --- Internal ---
prism-db-core = { workspace = true }

# --- Types & Utils ---
chrono       = { workspace = true }
rust_decimal = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }

# --- SQL ---
sqlx = { workspace = true, features = ["sqlite"] }

# --- Async & Runtime ---
async-trait = { workspace = true }
futures     = { workspace = true }
