[package]
name = "simple-db-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# --- Internal ---
simple-db-core = { workspace = true }

# --- Types & Utils---
chrono       = { workspace = true }
rust_decimal = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }

# --- SQL ---
sqlx = { workspace = true, features = ["mysql", "rust_decimal"] }

# --- Async & Runtime ---
tokio       = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }